# WordleCPP

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  main.cpp
include/wordlecpp/: WordleCPP.hpp  debug.hpp  game_session.hpp  global_session.hpp  graphics.hpp  information.hpp  paths.hpp  profile.hpp  rd.hpp  wordlecpp.hpp  words_storage.hpp
resources/: .gitignore  note.txt  wrd_en.json
src/wordlecpp/: GlobalSession.cpp  Paths.cpp  Profile.cpp  WordleCPP.cpp  debug.cpp  game_session.cpp  global_session.cpp  graphics.cpp  information.cpp  paths.cpp  profile.cpp  rd.cpp  wordlecpp.cpp  words_storage.cpp
src/wordlecpp/WordsStorage/: WordsStorage.cpp
